# newtype-algebra

./: README.md  newtype-algebra.cabal
nix/: hix.nix
src/Data/: Field.hs  Group.hs  Ring.hs  Semiring.hs
